--- a/css/base.css
+++ b/css/base.css
@@ -3,15 +3,13 @@ body {
   margin: 0 auto;
 }
 
-/*https://stackoverflow.com/questions/19414856/how-can-i-make-all-images-of-different-height-and-width-the-same-via-css*/
 img {
   position: relative;
   float: left;
+  margin: 25px;
+  outline: solid darkgray 1px;
+  background-color: darkgray;
   width: 300px;
   height: 300px;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin: 25px;
-  outline: solid black 1px;
+  object-fit: scale-down;
 }
