--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 body {
   width: 1200px;
   margin: 0 auto;
+  font-family: 'Roboto', sans-serif;
 }
 
 img {
