--- a/css/base.css
+++ b/css/base.css
@@ -12,7 +12,7 @@ img {
   margin: 25px;
   outline: solid darkgray 1px;
   background-color: darkgray;
-  width: 300px;
-  height: 300px;
+  width: auto;
+  height: 175px;
   object-fit: scale-down;
 }
