--- a/css/layout.css
+++ b/css/layout.css
@@ -10,3 +10,21 @@
   justify-content: space-around;
 }
 
+/* From Chris Coyer https://css-tricks.com/couple-takes-sticky-footer/ for sticky footer */
+html, body {
+  height: 100%;
+}
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
+}
+
+footer {
+  flex-shrink: 0;
+}
+/* end of sticky footer code */
+
